# blackboard

./: .external_packages.json  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
blackboard/: CMakeLists.txt
blackboard/app/: app.cpp  app.h  resources.h
blackboard/cmake/: fetch_external_dependencies.cmake
blackboard/factories/: factories.cpp  factories.h
blackboard/gui/: components.cpp  components.h  gui.cpp  gui.h  imconfig.h  sequencer.cpp  sequencer.h
blackboard/meta/: meta.cpp  meta.h
blackboard/platform/: window.cpp  window.h
blackboard/renderer/: camera.h  layouts.h  material.h  program.cpp  program.h  renderer.cpp  renderer.h  utils.h
blackboard/renderer/platform/: fs_ocornut_imgui.bin.h  imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h
blackboard/renderer/shaders/: varying.def_original.sc
blackboard/renderer/shaders/uniform_color/: varying.def.sc
blackboard/scene/components/: animation.cpp  animation.h  name.h  transform.h  uuid.h
blackboard/state/: state.cpp  state.h
blackboard/utils/: watchdog.h
blackboard_core/: CMakeLists.txt
blackboard_core/app/: app.cpp  app.h  resources.h
blackboard_core/command/: command.cpp  command.h
blackboard_core/factories/: factories.cpp  factories.h
blackboard_core/gui/: components.cpp  components.h  gui.cpp  gui.h
blackboard_core/meta/: meta.cpp  meta.h
blackboard_core/platform/: window.cpp  window.h
blackboard_core/renderer/: camera.cpp  camera.h  layouts.h  material.h  program.cpp  program.h  renderer.cpp  renderer.h  utils.h
blackboard_core/renderer/platform/: imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h
blackboard_core/renderer/shaders/: color_original.frag  color_original.vert  definitions.sh  uniforms.sh
blackboard_core/renderer/shaders/common/: bgfx_shader.sh
blackboard_core/renderer/shaders/uniform_color/: uniform_color.frag  uniform_color.vert  varying.def.sc
blackboard_core/resources/: mesh.h  resources.cpp  resources.h
blackboard_core/scene/components/: animation.cpp  animation.h  components.cpp  components.h  name.h  resource.h  selected.h  transform.h  uuid.h
blackboard_core/state/: state.cpp  state.h
blackboard_core/utils/: watchdog.h  zip_iterator.h
blackboard_editor/: CMakeLists.txt  main.cpp
blackboard_editor/assets/layouts/: default_imgui.ini
blackboard_editor/editor/: editor.cpp  editor.h  sequencer.cpp  sequencer.h
cmake/: fetch_external_dependencies.cmake
core/: CMakeLists.txt
core/app/: app.cpp  app.h  app_headless.cpp  app_sdl_emscripten.cpp  app_sdl_metal.cpp  resources.h
core/gui/: gui.cpp  gui.h
core/platform/: window.h
core/renderer/: camera.cpp  effect.h  layouts.h  material.h  program.cpp  program.h  renderer.cpp  renderer.h
core/renderer/platform/: imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h  vs_ocornut_imgui.bin.h
core/renderer/shaders/uniform_color/: uniform_color.frag  uniform_color.vert
core/scene/components/: transform.h
core/src/: app.cpp  app.h  app_headless.cpp  app_sdl_metal.cpp  gui.cpp  gui.h
core/src/renderer/: renderer.cpp  renderer.h
core/src/renderer/platform/: fs_ocornut_imgui.bin.h  imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h  vs_ocornut_imgui.bin.h
core/state/: state.cpp  state.h
core/utils/: watchdog.h
engine_meta/: CMakeLists.txt  action_a.h  action_b.h  action_m.h  example.cpp  executor_a.h  executor_b.h  executor_m.h  main.cpp  module.cpp  module.h
example/: CMakeLists.txt  example.cpp
